Update asset management by adding new images and modifying .gitignore
- Added multiple new image files for various assets, including icons and backgrounds.
- Removed .png files from .gitignore to ensure they are tracked in the repository.
- Updated main.css to change the background color and adjust the height of the PageShell for improved layout.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,14 +1,14 @@
 body {
     display: flex;
     justify-content: center;
-    background-color: #d0c3e8;
+    background-color: #D5F0F5;
 }
 
 .PageShell {
     display: flex;
     flex-flow: column;
     width: 1230px;
-    height: 272vh;
+    height: 266vh;
     background-color: #ffffff;
 }
 
