Update image paths in testquiz.js and enhance header styles in testintro.css
- Changed image source paths in testquiz.js to ensure correct loading of restart and share button images.
- Added a background image and adjusted padding in testintro.css for improved header styling.

--- a/public/styles/testintro.css
+++ b/public/styles/testintro.css
@@ -8,6 +8,11 @@ main {
     padding: 44px 16px;
 }
 
+header {
+    background-image: url('../images/HeaderBackgroundImg.png');
+    padding: 20px 5px 80px;
+}
+
 .IntroShellImg {
     width: 350px;
     height: 500px;
