--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -159,7 +159,6 @@ main .NewTestList .NewTestListShell {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin-bottom: 20px;
 }
 
 main .NewTestList .NewTestListShell .NewTestShell {
@@ -168,6 +167,7 @@ main .NewTestList .NewTestListShell .NewTestShell {
   border-radius: 15px;
   background-color: #ffffff;
   cursor: pointer;
+  margin-bottom: 20px
 }
 
 main .NewTestList .NewTestListShell .NewTestShell .NewTest {
