--- a/public/styles/testquiz.css
+++ b/public/styles/testquiz.css
@@ -135,3 +135,117 @@ body {
     border: 2px solid #000000;
     background-color: rgb(255, 242, 128);
 }
+
+.QuizFooter {
+    position: absolute;
+    width: 464px;
+    bottom: 0;
+}
+
+.QuizFooter ul {
+    padding: 28px 12px 20px;
+    background-image: url('../images/FooterBackgroundImg.png');
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    background-position: center;
+}
+
+.QuizFooter ul li {
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+    padding: 60px 0;
+}
+
+.QuizFooter ul li a {
+    width: 24px;
+    height: 24px;
+    background-color: #fff;
+    text-align: center;
+    line-height: 24px;
+    font-size: 18px;
+    margin: 0 4px;
+    display: flex;
+    border-radius: 50%;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    border: 2px solid #fff;
+    z-index: 1;
+}
+
+.QuizFooter ul li a .icon {
+    position: relative;
+    width: 24px;
+    height: 24px;
+    color: #262626;
+    transition: .5s;
+    z-index: 3;
+}
+
+.QuizFooter ul li a:hover .icon {
+    color: #fff;
+    transform: rotateY(360deg);
+}
+
+.QuizFooter ul li a:before {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #f00;
+    transition: .5s;
+    z-index: 2;
+}
+
+.QuizFooter ul li a:hover:before {
+    top: 0;
+}
+
+.QuizFooter ul li a:nth-child(1):before {
+    background: #5851DB;
+}
+
+.QuizFooter ul li a:nth-child(2):before {
+    background: #fae100;
+}
+
+.QuizFooter ul li a:nth-child(3):before {
+    background: #03C75A;
+}
+
+.QuizFooter ul li a:nth-child(4):before {
+    background: #dd4b39;
+}
+
+.QuizFooter .FooterShell {
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0 0 16px;
+}
+
+.QuizFooter .FooterShell p {
+    margin-right: 12px;
+    color: #9d9d9d;
+}
+
+.QuizFooter .FooterShell p:last-child {
+    margin-right: 0px;
+}
+
+.QuizFooter .Copyright {
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+    padding: 4px 0;
+    font-size: 12px;
+    color: #00ffff;
+    background-color: #000000;
+}
