--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -27,7 +27,7 @@ header {
 }
 
 .bg-on {
-  background-image: url('../images/HeaderBackgroundImgNon.png');
+  background-image: url('https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/HeaderBackgroundImgNon.png');
   padding: 20px 5px 80px !important;
 }
 
@@ -253,7 +253,7 @@ main .NewTestList .NewTestListShell .NewTestShell .NewTest .NewTestHashTag>span 
 
 /* 푸터 시작 */
 footer ul {
-  background-image: url('../images/FooterBackgroundImg.png');
+  background-image: url('https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/FooterBackgroundImg.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -386,7 +386,7 @@ footer .Copyright {
 
   header {
     padding: 28px 12px 20px;
-    background-image: url('../images/HeaderBackgroundImgNon.png');
+    background-image: url('https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/HeaderBackgroundImgNon.png');
     background-size: 100% auto;
     background-repeat: no-repeat;
     background-position: top center;
