--- a/public/styles/testintro.css
+++ b/public/styles/testintro.css
@@ -9,7 +9,7 @@ main {
 }
 
 header {
-    background-image: url('../images/HeaderBackgroundImg.png');
+    background-image: url('https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/HeaderBackgroundImg.png');
     padding: 20px 5px 80px;
 }
 
@@ -103,7 +103,7 @@ footer {
 
     header {
         padding: 28px 12px 20px;
-        background-image: url('../images/HeaderBackgroundImgNon.png');
+        background-image: url('https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/HeaderBackgroundImgNon.png');
         background-size: 100% auto;
         background-repeat: no-repeat;
         background-position: top center;
