--- a/public/styles/testintro.css
+++ b/public/styles/testintro.css
@@ -174,7 +174,8 @@ footer {
     }
 
     footer {
-        position: static;
+        position: absolute;
         width: 100%;
+        bottom: 0;
     }
 }
