--- a/public/styles/reset.css
+++ b/public/styles/reset.css
@@ -7,12 +7,12 @@
   box-sizing: border-box;
 }
 
-html,
+/* html,
 body {
   height: 100%;
   font-family: sans-serif;
   line-height: 1.5;
-}
+} */
 
 ol,
 ul {
