--- a/public/styles/testintro.css
+++ b/public/styles/testintro.css
@@ -172,8 +172,7 @@ footer {
     }
 
     footer {
-        position: absolute;
+        position: static;
         width: 100%;
-        bottom: 0;
     }
 }
