--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -9,9 +9,9 @@ body {
 
 :root {
   /* JS(config.js)로도 주입되지만, 초기 렌더에서 이미지 로딩을 늦추지 않도록 기본값을 둔다 */
-  --asset-header-bg: url(/assets/images/HeaderBackgroundImg.png);
-  --asset-header-bg-non: url(/assets/images/HeaderBackgroundImgNon.png);
-  --asset-footer-bg: url(/assets/images/FooterBackgroundImg.png);
+  --asset-header-bg: url(/cdn-cgi/image/width=1600,quality=80,fit=cover,format=auto/assets/images/HeaderBackgroundImg.png);
+  --asset-header-bg-non: url(/cdn-cgi/image/width=1600,quality=80,fit=cover,format=auto/assets/images/HeaderBackgroundImgNon.png);
+  --asset-footer-bg: url(/cdn-cgi/image/width=1600,quality=80,fit=cover,format=auto/assets/images/FooterBackgroundImg.png);
 }
 
 .PageShell {
